# SinesFileSanitizer

./: CMakeLists.txt  README.md  SinesFileSanitizer.cpp  SinesFileSanitizer.h  test.cpp
